2013-05-07 Pedro Vicente  <pvicente@uci.edu>

        * ncflint test #5 Group weight 1D variable
        
        * nco_get_typ() Obtain netCDF type to define variable from NCO program ID 

2013-05-07  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.2 release procedure:
 	Changes since nco-4_3_1: -X aux, ncflint -g -G --unn
	cd ~/nco;cvs tag -d nco-4_3_2;cvs tag -d nco-4_3_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.2 release"
	cvs tag -c nco-4_3_2;cvs tag -c nco-4_3_2-1

	* Document new ncflint, ncbo capabilities

2013-05-06 Pedro Vicente  <pvicente@uci.edu>

        * nco_fll_var_trv() Fill-in variable structure list for all extracted variables

2013-05-03 Pedro Vicente  <pvicente@uci.edu>

        * nco_bld_aux_crd() Parse auxiliary coordinates

        * ncks test #69 Parse auxiliary coordinates

2013-05-01  Charlie Zender  <zender@uci.edu>

	* Add byte arrays to in.cdl

	* NCO 4.3.1 release procedure:
 	Changes since nco-4_3_0: ncbo -G, --unn, symmetric, grp_brd
	cd ~/nco;cvs tag -d nco-4_3_1;cvs tag -d nco-4_3_1-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.1 release"
	cvs tag -c nco-4_3_1;cvs tag -c nco-4_3_1-1

	* Update Makefiles to build without failing new CDL files

2013-04-29  Charlie Zender  <zender@uci.edu>

	* Move buggy CDL code from in_grp.cdl to buggy.cdl

2013-04-28  Charlie Zender  <zender@uci.edu>

	* Use realistic temperatures in obs.cdl, cmip5.cdl

	* GCC 4.7.3 finally includes strcasestr() in string.h, I think

2013-04-26  Charlie Zender  <zender@uci.edu>

	* Document new ncbo, ncecat, group broadcasting features

2013-04-24  Charlie Zender  <zender@uci.edu>

	* ncrcat: Fix false positives on non-monotonicity checks in rec_crd_chk()
	by only checking monotonicity of first record coordinate encountered.

	* ncecat: Tidy OpenMP

2013-04-24  Pedro Vicente  <pvicente@uci.edu>

        * trv_tbl_mrk_prc_fix() Mark fixed/processed flag in table

        * ncecat test #6,7,8 Concatenate variables/groups: 1D,2D variables
